# UHH_UB_AgeAwareHRI

./: .gitignore  .gitmodules  =1.21.6  README.md  ar_main.py  evaluation.py  requirements.txt  setup.bash  setup.sh  setup_pycram.bash  start_age_recongition.py
age_recognition/: README.md  ar_main.py  pyproject.toml
age_recognition/config/: cv_visualization.yaml
age_recognition/configs/: commands.txt  live_model_config.yaml
age_recognition/corpora/: utils.py
age_recognition/model_components/: agerec_model.py  live_inference.py  live_model.py  utils.py
age_recognition/src/age_recognition/: ar_main.py  live_model.py  utils.py
age_recognition/src/age_recognition/configs/: commands.txt  live_model_config.yaml
age_recognition/src/age_recognition/corpora/: common_voice.py
age_recognition/src/age_recognition/experiments/: cv_visualization.py
age_recognition/src/age_recognition/model_components/: asr_model.py
age_recognition_pub/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
age_recognition_pub/msg/: age_recognition.msg
age_recognition_pub/src/: publisher.py  publisher.py~
age_stuff/corpora/: age_vox_celeb.py
age_stuff/model_components/: live_model.py
eval_tools/: eval_config.yaml  eval_utils.py  permutation-commands-script.py  read_robot_statistic.py
models/: utils.py
speech_processing/: CMakeLists.txt  package.xml
speech_processing/msg/: command_and_age.msg
speech_processing/src/: speech_client.py  speech_processing_client.py  speech_processing_server.py  speech_server.py
speech_processing/srv/: SpeechRecogniton.srv
src/robot/: CMakeLists.txt  package.xml
src/robot/src/: robot.py
src/speech_processing/: CMakeLists.txt  setup.py
src/speech_processing/msg/: command_and_age.msg  dict_object.msg  message_from_robot.msg  message_objects_in_use.msg  message_to_robot.msg
src/speech_processing/src/: dialogue_system_node.py  speech_processing_client.py  speech_synthesis.py
src/speech_processing/src/age_recognition/: age_recognition_model.py  ar_components.py  attention_network.py  live_model.py  utils.py
src/speech_processing/src/dialogue_system/: data_generation.py  dialogue_dummy.py  prompts.py  (+9 more)
(+3 files in other folders)
